// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply active color to loading icon 1`] = `
<div class="van-loading van-loading--circular van-switch__loading">
  <span class="van-loading__spinner van-loading__spinner--circular"
        style="color: red;"
  >
    <svg class="van-loading__circular"
         viewbox="25 25 50 50"
    >
      <circle cx="50"
              cy="50"
              r="20"
              fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`should apply inactive color to loading icon 1`] = `
<div class="van-loading van-loading--circular van-switch__loading">
  <span class="van-loading__spinner van-loading__spinner--circular"
        style="color: black;"
  >
    <svg class="van-loading__circular"
         viewbox="25 25 50 50"
    >
      <circle cx="50"
              cy="50"
              r="20"
              fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;
